--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           #  - smalltalk: 3.7.1
           #   os: macos-12
           # - smalltalk: 3.7.1
-            os: macos-11
+          #  os: macos-11
     runs-on: ${{ matrix.os }}
     env:
       GS_VERS: ${{ matrix.smalltalk }}
