--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,11 +45,13 @@ jobs:
           export GSDEVKIT_STONES_ROOT=$GITHUB_WORKSPACE
           echo "GSDEVKIT_STONES_ROOT=$GITHUB_WORKSPACE" >> "$GITHUB_ENV"
           # exploring
+          MY_PWD=`pwd`
+          echo "pwd=$MY_PWD`
           echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
           ls $GITHUB_WORKSPACE
           echo "WORK_ROOT=$WORK_ROOT"
           ls $WORK_ROOT
-
+          # cloning
           exit 1
           # clones superDoit and installs 3.7.1 to be used for .solo scripts
           $GSDEVKIT_STONES_ROOT/bin/install.sh $GS_VERS
