--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           cd $WORK_ROOT
           ls
           # cloning
-          git clone git@github.com:GsDevKit/GsDevKit_stones.git -b v2.1
+          git clone https://github.com/GsDevKit/GsDevKit_stones.git -b v2.1
           ls
           export GSDEVKIT_STONES_ROOT=$WORK_ROOT/GsDevKit_stones
           # clones superDoit and installs 3.7.1 to be used for .solo scripts
