--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
           echo "WORK_ROOT=$WORK_ROOT"
           cd $WORK_ROOT
           ls
+          export ROWAN4GSDEVKIT_ROOT=$WORK_ROOT/Rowan4GsDevKit
+          echo "ROWAN4GSDEVKIT_ROOT=$ROWAN4GSDEVKIT_ROOT"
+          echo "ROWAN4GSDEVKIT_ROOT=$ROWAN4GSDEVKIT_ROOT" >> "$GITHUB_ENV"
           echo cloning
           git clone https://github.com/GsDevKit/GsDevKit_stones.git -b v2.1
           export GSDEVKIT_STONES_ROOT=$WORK_ROOT/GsDevKit_stones
@@ -102,9 +105,9 @@ jobs:
           export STONES_gemstone=$STONES_HOME/gemstone
           echo "STONES_gemstone=$STONES_HOME/gemstone" >> "$GITHUB_ENV"
 
-          export PATH=$SUPERDOIT_ROOT/bin:$GSDEVKIT_STONES_ROOT/bin:$PATH
-          echo "PATH=$SUPERDOIT_ROOT/bin:$GSDEVKIT_STONES_ROOT/bin:$PATH"
-          echo "PATH=$SUPERDOIT_ROOT/bin:$GSDEVKIT_STONES_ROOT/bin:$PATH" >> "$GITHUB_ENV"
+          export PATH=$ROWAN4GSDEVKIT_ROOT/bin:$SUPERDOIT_ROOT/bin:$GSDEVKIT_STONES_ROOT/bin:$PATH
+          echo "PATH=$$PATH"
+          echo "PATH=$ROWAN4GSDEVKIT_ROOT/bin:$SUPERDOIT_ROOT/bin:$GSDEVKIT_STONES_ROOT/bin:$PATH" >> "$GITHUB_ENV"
 
           echo "SUPERDOIT_ROOT/bin"
           ls -altr $SUPERDOIT_ROOT/bin
@@ -122,17 +125,12 @@ jobs:
 
           echo "versionReport.solo" 
           versionReport.solo
-          echo "createRegistry.solo"
-          createRegistry.solo _stones
-          echo "createProjectSet.solo"
-          createProjectSet.solo --registry=_stones --projectSet=_stones --from=$GSDEVKIT_STONES_ROOT/projectSets/https/_stones.ston
-          echo "cloneProjectsFromProjectSet.solo"
-          cloneProjectsFromProjectSet.solo --registry=_stones --projectSet=_stones --projectDirectory=$STONES_git --update
 
+          echo "gslist.solo" 
           gslist.solo -l
 
         shell: bash
-      - name: run help test
+      - name: run master_baseTode.sh
         run: |
           echo "CI=$CI"
           echo "SUPERDOIT_ROOT=$SUPERDOIT_ROOT"
@@ -142,30 +140,8 @@ jobs:
           echo "STONES_DATA_HOME=$STONES_DATA_HOME"
           echo "STONES_HOME=$STONES_HOME"
 
-          $GSDEVKIT_STONES_ROOT/tests/test_help.sh
-        shell: bash
-      - name: run project set tests
-        run: |
-          echo "CI=$CI"
-          $GSDEVKIT_STONES_ROOT/tests/test_projectSets.sh
-        shell: bash
-      - name: run default registry test
-        run: |
-          echo "CI=$CI"
-          $GSDEVKIT_STONES_ROOT/tests/test_defaultRegistry.sh
-          gslist.solo -lc
-          deleteRegistry.solo `hostname` -f
-          gslist.solo -l
-          
-        shell: bash
-      - name: run tODE test
-        run: |
-          echo "CI=$CI"
-          $GSDEVKIT_STONES_ROOT/tests/test_tode.sh
-          gslist.solo -lc
-          deleteRegistry.solo devkit -f
-          gslist.solo -l
-  slack-workflow-status:
+          $ROWAN4GSDEVKIT_ROOT/tests/master_baseTode.sh
+   slack-workflow-status:
     if: always()
     name: Post Workflow Status To Slack
     needs:
