add mac platforms to lineup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,14 @@ jobs:
         os: [ ubuntu-20.04 ]
         smalltalk: [ 3.7.1 ]
         #include:
-          #  - smalltalk: 3.7.1
-          #   os: ubuntu-22.04
-          # - smalltalk: 3.7.1
-          #   os: macos-13
-          #  - smalltalk: 3.7.1
-          #   os: macos-12
-          # - smalltalk: 3.7.1
-          #  os: macos-11
+          - smalltalk: 3.7.1
+            os: ubuntu-22.04
+          - smalltalk: 3.7.1
+            os: macos-13
+          - smalltalk: 3.7.1
+            os: macos-12
+          - smalltalk: 3.7.1
+            os: macos-11
     runs-on: ${{ matrix.os }}
     env:
       GS_VERS: ${{ matrix.smalltalk }}
