--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ ubuntu-20.04 ]
         smalltalk: [ 3.7.1 ]
-        #include:
+        include:
           - smalltalk: 3.7.1
             os: ubuntu-22.04
           - smalltalk: 3.7.1
