--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,15 +151,13 @@ jobs:
           # generate a Rowan 3 project for doing seaside development
           rowanProjectName=seaside_rowan3
           registryName=test_Rowan4GsDevKit
-          echo "BEFORE"
           stoneDirectory=`registryQuery.solo -r $registryName  --stonesDirectory`
           echo "stoneDirectory=$stoneDirectory"
-          projectsHome=$stoneDirectory/tode_r4_3.7.1/projectsHome
+          projectsHome=$stoneDirectory/tode_r4_$GS_VERS/projectsHome
           echo "projectsHome=$projectsHome"
           $ROWAN4GSDEVKIT_ROOT/bin/generateProject.solo $ROWAN4GSDEVKIT_ROOT/packageMaps/371/seaside.ston --projectName=$rowanProjectName --componentName=Core --projectsHome=$projectsHome
-          echo "AFTER"
           # install the seaside_rowan3 project into rowan3_r4_3.7.1 stone
-          cd $stoneDirectory
+          cd $stoneDirectory/rowan3_r4_$GS_VERS
           installProject.stone file:projectsHome/seaside_rowan3/rowan/specs/seaside_rowan3.ston --projectsHome=projectsHome --ignoreInvalidCategories --noAutoInitialize
   slack-workflow-status:
     if: always()
