--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,15 @@ jobs:
       matrix:
         os: [ ubuntu-20.04 ]
         smalltalk: [ 3.7.1 ]
-#        include:
-#          - smalltalk: 3.7.1
-#            os: ubuntu-22.04
-#          - smalltalk: 3.7.1
-#            os: macos-13
-#          - smalltalk: 3.7.1
-#            os: macos-12
-#          - smalltalk: 3.7.1
-#            os: macos-11
+        include:
+          - smalltalk: 3.7.1
+            os: ubuntu-22.04
+          - smalltalk: 3.7.1
+            os: macos-13
+          - smalltalk: 3.7.1
+            os: macos-12
+          - smalltalk: 3.7.1
+            os: macos-11
     runs-on: ${{ matrix.os }}
     env:
       GS_VERS: ${{ matrix.smalltalk }}
